# boyodb

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PERF_BASELINE.md  README.md  clippy.toml  docker-compose.yml  patch_engine.py  test_lz4  test_lz4.rs
--bind/wal/: manifest.snapshot.bincode
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: bench-core.yml  ci.yml  docker.yml  release.yml
bindings/go/: README.md  go.mod  go.sum
bindings/go/boyodb/: arrowutil.go  cdrdb.go
bindings/go/cmd/cdrdb-go-cli/: main.go
bindings/node/: Cargo.toml  README-cli.md  README.md  build.rs  cli.js  index.js  make-sample-ipc.js  package-lock.json  package.json  utils.js
bindings/node/src/: lib.rs
crates/boyodb-bench/: Cargo.toml
crates/boyodb-bench/src/: main.rs
crates/boyodb-cli/: Cargo.toml
crates/boyodb-cli/src/: main.rs  shell.rs
crates/boyodb-core/: Cargo.toml
crates/boyodb-core/benches/: ipc_streaming_bench.rs
crates/boyodb-core/include/: boyodb.h
crates/boyodb-core/src/: advanced_indexes.rs  advisory_locks.rs  ai_query_optimizer.rs  analytics.rs  approximate.rs  async_insert.rs  audit_log.rs  auth.rs  auto_scaling.rs  auto_tuner.rs  automl.rs  benchmarks.rs  blockchain_ledger.rs  bloom_utils.rs  btree.rs  bulk_operations.rs  cdc.rs  cdc_lake.rs  cdc_sink.rs  cdc_webhooks.rs  collation.rs  column_masking.rs  compression.rs  conflict_resolution.rs  connection_management.rs  connection_pool.rs  connection_pooler.rs  constraint_validator.rs  cross_db.rs  cursor_support.rs  data_catalog.rs  data_contracts.rs  data_formats.rs  data_integrity.rs  data_lineage.rs  data_quality.rs  data_retention.rs  deadlock_detection.rs  delta_encoding.rs  deployment.rs  (+143 more)
crates/boyodb-core/src/cluster/: distributed_recovery.rs  election.rs  failure_detector.rs  gossip.rs  messages.rs  mod.rs  replication.rs
crates/boyodb-core/tests/: distributed_test.rs  financial_grade_test.rs  fulltext_index_test.rs  fulltext_stress_test.rs  hash_index_test.rs  hll_test.rs  lz4_test.rs  tiering_test.rs  wal_integration.rs
crates/boyodb-ingestor/: Cargo.toml
crates/boyodb-ingestor/src/: main.rs
crates/boyodb-server/: Cargo.toml
crates/boyodb-server/src/: main.rs  server_pg.rs
crates/boyodb-server/tests/: integration_tests.rs  pg_extended_test.rs  pg_wire_test.rs
docs/: API.md  BENCHMARK_RESULTS.md  CLI.md  CLUSTERING.md  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  SHELL.md  SQL.md  STORAGE_PHASES.md  USER_GUIDE.md
drivers/csharp/: README.md
drivers/csharp/Boyodb/: Boyodb.csproj  Client.cs  Config.cs  Exceptions.cs  Pool.cs  QueryResult.cs
drivers/go/boyodb/: README.md  analytics.go  async_insert.go  cdc.go  client.go  errors.go  example_test.go  external.go  go.mod  pool.go  result.go  transactions.go
drivers/java/: README.md  pom.xml
drivers/java/src/main/java/io/boyodb/client/: BoyoDBClient.java  BoyoDBConfig.java  BoyoDBException.java  QueryResult.java  TableInfo.java
drivers/nodejs/: README.md
drivers/nodejs/boyodb/: README.md  analytics.js  async_insert.js  external.js  index.d.ts  index.js  package-lock.json  package.json  pool.js  subscriptions.js  transactions.js
drivers/php/: README.md
drivers/php/boyodb/: composer.json
drivers/php/boyodb/src/: Client.php  Config.php  Exceptions.php  Pool.php  QueryResult.php
drivers/python/: README.md  benchmark.py  pyproject.toml  setup.py
drivers/python/boyodb/: __init__.py  analytics.py  async_insert.py  client.py  errors.py  external.py  pool.py  subscriptions.py  transactions.py
drivers/rust/: README.md
drivers/rust/boyodb/: Cargo.toml
drivers/rust/boyodb/src/: batch.rs  client.rs  config.rs  error.rs  lib.rs  pool.rs  result.rs  transaction.rs
scripts/: bsql  install.sh
tests/: cluster_failover_test.sh
