[workspace]
members = [
  "crates/boyodb-core",
  "bindings/node",
  "crates/boyodb-cli",
  "crates/boyodb-server",
  "crates/boyodb-bench",
]
exclude = [
  "drivers/rust/boyodb",
  "crates/boyodb-ingestor",  # Specialized telecom CDR tool (optional)
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.9.6"
license = "Apache-2.0"
authors = ["boyodb authors"]

# Release build optimizations for maximum performance
[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"            # Link-time optimization (thin for faster builds)
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip symbols for smaller binaries

# Profile for profiling (release with debug info)
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Bench profile with maximum performance
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

# Workspace-level lint configuration
[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
result_large_err = "allow"
derivable_impls = "allow"
needless_range_loop = "allow"
manual_clamp = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
redundant_closure = "allow"
# map_or_instead_of_map_or_else = "allow" # Removed lint
or_fun_call = "allow"
approx_constant = "allow"
manual_div_ceil = "allow"
get_first = "allow"
needless_borrow = "allow"
manual_range_contains = "allow"
clone_on_ref_ptr = "allow"
cloned_ref_to_slice_refs = "allow"
redundant_pattern_matching = "allow"
match_like_matches_macro = "allow"
inconsistent_digit_grouping = "allow"
unusual_byte_groupings = "allow"
# Additional suppressions
unnecessary_wraps = "allow"
match_ref_pats = "allow"
single_match = "allow"
len_zero = "allow"
manual_map = "allow"
manual_is_multiple_of = "allow"
useless_vec = "allow"
filter_map_identity = "allow"
field_reassign_with_default = "allow"
inherent_to_string = "allow"
should_implement_trait = "allow"
manual_strip = "allow"
unnecessary_cast = "allow"
iter_overeager_cloned = "allow"
map_unwrap_or = "allow"
vec_init_then_push = "allow"
explicit_iter_loop = "allow"
# extend_from_slice = "allow" # Removed lint
clone_on_copy = "allow"
option_map_or_none = "allow"
if_same_then_else = "allow"
assertions_on_constants = "allow"
unnecessary_lazy_evaluations = "allow"
# Removed: thread_local_initializer_can_be_made_const (renamed to missing_const_for_thread_local)
redundant_clone = "allow"
explicit_auto_deref = "allow"
unused_enumerate_index = "allow"
# Additional suppressions for remaining lints
match_single_binding = "allow"
iter_cloned_collect = "allow"
vec_box = "allow"
vec_resize_to_zero = "allow"
manual_retain = "allow"
single_match_else = "allow"
iter_next_slice = "allow"
double_ended_iterator_last = "allow"
expect_used = "allow"
needless_question_mark = "allow"
needless_return = "allow"
explicit_deref_methods = "allow"
# manual_arithmetic_check = "allow" # Invalid lint name
map_entry = "allow"
explicit_counter_loop = "allow"
map_clone = "allow"
# More suppressions
question_mark_used = "allow"
unwrap_or_default = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_unwrap = "allow"
redundant_else = "allow"
# match_on_vec_items = "allow" # Removed lint
option_if_let_else = "allow"
extend_with_drain = "allow"
# Correct lint names
unnecessary_map_or = "allow"
while_let_on_iterator = "allow"
op_ref = "allow"
match_result_ok = "allow"
implicit_saturating_sub = "allow"
missing_const_for_thread_local = "allow"
zombie_processes = "allow"
while_let_loop = "allow"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_assignments = "allow"
