[package]
name = "boyodb-node"
version = "0.2.6"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4", "napi6"] }
napi-derive = "2"
boyodb-core = { path = "../../crates/boyodb-core" }
serde_json = "1.0"

[lints]
workspace = true
