[package]
name = "boyodb-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
boyodb-core = { path = "../boyodb-core" }
tokio = { version = "1.28", features = ["full"] }
arrow = { version = "52", features = ["prettyprint"] }
arrow-array = "52"
arrow-schema = "52"
parquet = "52"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
