[package]
name = "boyodb-cli"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
boyodb-core = { path = "../boyodb-core" }
libloading = "0.8"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
rustyline = "14"
base64 = "0.22"
arrow-ipc = "54"
arrow-array = "54"
arrow-schema = "54"
arrow-cast = "54"
comfy-table = "7"
dirs-next = "2"
rpassword = "7"
hex = "0.4"
terminal_size = "0.4"

[lints]
workspace = true
