[package]
name = "boyodb-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust core for a low-latency CDR database with C ABI bindings"

[lib]
name = "boyodb_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
arrow = { version = "52", features = ["ipc"] }
arrow-array = "52"
arrow-ipc = "52"
arrow-schema = "52"
arrow-select = "52"
arrow-buffer = "52"
arrow-ord = "52"
crc32fast = "1.4"
bloomfilter = { version = "1.0", features = ["serde"] }
bincode = "1.3"
chrono = "=0.4.34"
zstd = "0.13"
lz4_flex = "0.11"              # Fast LZ4 compression (pure Rust)
snap = "1.1"                   # Snappy compression
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
serde_bytes = "0.11"
sqlparser = "0.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
rayon = "1.10"
argon2 = "0.5"
rand = "0.8"
lru = "0.12"
parking_lot = "0.12"
rustc-hash = "2.0"          # Fast hash for HashMaps
regex = "1.10"              # For LIKE pattern matching
base64 = "0.22"

# Cluster dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
hostname = "0.4"
libm = "0.2"                # For erf function in phi accrual detector
hex = "0.4"                 # For hex encoding binary data
tempfile = "3"              # For temporary files in JOIN operations
hyperloglogplus = "0.4.1"
object_store = { version = "0.9", features = ["aws"] }
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"

[dev-dependencies]
