[package]
name = "boyodb-core"
version = "0.9.7"
edition = "2021"
license = "Apache-2.0"
description = "High-performance columnar database engine for real-time analytics"

[lib]
name = "boyodb_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
arrow = { version = "54", features = ["ipc"] }
arrow-array = "54"
arrow-ipc = "54"
arrow-schema = "54"
arrow-select = "54"
arrow-buffer = "54"
arrow-ord = "54"
arrow-cast = "54"

# DataFusion query engine for advanced optimization and GPU acceleration
datafusion = { version = "44", optional = true }
datafusion-common = { version = "44", optional = true }
datafusion-expr = { version = "44", optional = true }
datafusion-physical-plan = { version = "44", optional = true }
crc32fast = "1.4"
bloomfilter = { version = "1.0", features = ["serde"] }
bincode = "1.3"
chrono = ">=0.4.34, <0.4.40"
zstd = "0.13"
lz4_flex = "0.11.6"            # Fast LZ4 compression (pure Rust) - CVE fix for memory leak
snap = "1.1"                   # Snappy compression
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
futures = "0.3"                # Async utilities for parallel S3 I/O
serde_bytes = "0.11"
sqlparser = "0.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
rayon = "1.10"
argon2 = "0.5"
rand = "0.8"
lru = "0.16"
parking_lot = "0.12"
rustc-hash = "2.0"          # Fast hash for HashMaps
regex = "1.10"              # For LIKE pattern matching
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"              # SHA-256 hashing for blockchain ledger

# Cluster dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
hostname = "0.4"
libm = "0.2"                # For erf function in phi accrual detector
hex = "0.4"                 # For hex encoding binary data
tempfile = "3"              # For temporary files in JOIN operations
hyperloglogplus = "0.4.1"
object_store = { version = "0.13", features = ["aws"] }
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"
ordered-float = { version = "4.2", features = ["serde"] }   # For ordered floats in B-Tree keys
xxhash-rust = { version = "0.8", features = ["xxh64"] }     # Fast hashing for checksums
libc = "0.2"                                                 # For disk space checking (statvfs)
memmap2 = "0.9"                                              # Memory-mapped file access for large segments
nix = { version = "0.28", features = ["fs", "uio"] }         # Unix system calls for vectored I/O

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "minwindef"] }  # Windows disk space checking
io-uring = { version = "0.6", optional = true }              # Real io_uring support on Linux

# FDW PostgreSQL connectivity
tokio-postgres = { version = "0.7", optional = true }
postgres-types = { version = "0.2", optional = true, features = ["derive"] }

# JIT compilation with Cranelift
cranelift = { version = "0.95", optional = true }
cranelift-module = { version = "0.95", optional = true }
cranelift-jit = { version = "0.95", optional = true }
cranelift-codegen = { version = "0.95", optional = true }
cranelift-frontend = { version = "0.95", optional = true }
target-lexicon = { version = "0.12", optional = true }

# ICU Unicode support
icu = { version = "1.4", optional = true }
icu_collator = { version = "1.4", optional = true }
icu_normalizer = { version = "1.4", optional = true }
icu_locid = { version = "1.4", optional = true }

# LDAP/AD authentication
ldap3 = { version = "0.12", optional = true, default-features = false, features = ["tls-rustls"] }

# Metal GPU support (macOS)
metal = { version = "0.27", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }

[features]
default = []
# Enable real io_uring support (Linux 5.1+)
io-uring-async = ["io-uring"]
# Enable DataFusion query engine integration for advanced optimization
datafusion-engine = ["datafusion", "datafusion-common", "datafusion-expr", "datafusion-physical-plan"]
# Enable GPU acceleration (requires CUDA runtime)
gpu = ["datafusion-engine"]
# Enable FDW PostgreSQL connectivity
fdw-postgres = ["tokio-postgres", "postgres-types"]
# Enable JIT compilation with Cranelift
jit-cranelift = ["cranelift", "cranelift-module", "cranelift-jit", "cranelift-codegen", "cranelift-frontend", "target-lexicon"]
# Enable ICU Unicode support
icu-collation = ["icu", "icu_collator", "icu_normalizer", "icu_locid"]
# Enable Metal GPU support (macOS only)
metal-gpu = ["metal", "objc", "block"]
# Enable LDAP/AD authentication
ldap-auth = ["ldap3"]

[lints]
workspace = true

[dev-dependencies]
