[package]
name = "boyodb-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple framed JSON/Arrow TCP server for boyodb"

[dependencies]
boyodb-core = { path = "../boyodb-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1.0"
arrow-csv = "52"
arrow-array = "52"
arrow-schema = "52"
arrow-ipc = "52"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "fs"] }
tokio-rustls = "0.26"
rustls = "0.22"
rustls-pemfile = "2"
zstd = "0.13"
webpki-roots = "0.26"
subtle = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hex = "0.4"
pgwire = "0.20"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio-postgres = "0.7"
