[package]
name = "boyodb"
version = "0.1.0"
edition = "2021"
authors = ["BoyoDB Team"]
description = "Rust client driver for boyodb-server"
license = "Apache-2.0"
repository = "https://github.com/loreste/boyodb"
keywords = ["database", "columnar", "analytics", "time-series"]
categories = ["database"]

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "time", "sync", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
thiserror = "1.0"

# TLS dependencies (optional)
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["tls12"] }
webpki-roots = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

[features]
default = []
tls = ["rustls", "tokio-rustls", "webpki-roots", "rustls-pemfile"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
